compiler/tests/snapshots/parser_snapshot__parse_assign.snap
---
source: compiler/tests/parser_snapshot.rs
expression: res
---
Ok(Assign(Assign(
  target: Var(
    name: "x",
    span: Span(
      start: 0,
      end: 1,
    ),
  ),
  value: IntLit(
    value: 10,
    suffix: None,
    span: Span(
      start: 4,
      end: 6,
    ),
  ),
  span: Span(
    start: 0,
    end: 7,
  ),
)))
