compiler/tests/snapshots/parser_snapshot__parse_bare_return.snap
---
source: compiler/tests/parser_snapshot.rs
expression: res
---
Ok(Return(None, Span(
  start: 0,
  end: 7,
)))
