compiler/tests/snapshots/parser_snapshot__parse_binary_add.snap
---
source: compiler/tests/parser_snapshot.rs
expression: res
---
Ok(Binary(
  op: Add,
  lhs: IntLit(
    value: 1,
    suffix: None,
    span: Span(
      start: 0,
      end: 1,
    ),
  ),
  rhs: IntLit(
    value: 2,
    suffix: None,
    span: Span(
      start: 4,
      end: 5,
    ),
  ),
  span: Span(
    start: 0,
    end: 5,
  ),
))
