compiler/tests/snapshots/parser_snapshot__parse_extern_fn.snap
---
source: compiler/tests/parser_snapshot.rs
expression: res
---
Ok(SourceFile(
  items: [
    ExternFnDecl(ExternFnDecl(
      abi: "C",
      name: ("putchar", Span(
        start: 14,
        end: 21,
      )),
      params: [
        Param(
          name: ("c", Span(
            start: 22,
            end: 23,
          )),
          ty: (Named("int32"), Span(
            start: 25,
            end: 30,
          )),
        ),
      ],
      ret_ty: Some((Named("int32"), Span(
        start: 33,
        end: 38,
      ))),
      span: Span(
        start: 0,
        end: 39,
      ),
    ), false),
  ],
))
