compiler/tests/snapshots/parser_snapshot__parse_fn_decl.snap
---
source: compiler/tests/parser_snapshot.rs
expression: res
---
Ok(SourceFile(
  items: [
    FunctionDecl(FunctionDecl(
      name: ("add", Span(
        start: 3,
        end: 6,
      )),
      generic_params: [],
      params: [
        Param(
          name: ("a", Span(
            start: 7,
            end: 8,
          )),
          ty: (Named("int"), Span(
            start: 10,
            end: 13,
          )),
        ),
        Param(
          name: ("b", Span(
            start: 15,
            end: 16,
          )),
          ty: (Named("int"), Span(
            start: 18,
            end: 21,
          )),
        ),
      ],
      ret_ty: Some((Named("int"), Span(
        start: 24,
        end: 27,
      ))),
      where_clauses: [],
      body: Block(
        stmts: [
          Return(Some(Binary(
            op: Add,
            lhs: Var(
              name: "a",
              span: Span(
                start: 37,
                end: 38,
              ),
            ),
            rhs: Var(
              name: "b",
              span: Span(
                start: 41,
                end: 42,
              ),
            ),
            span: Span(
              start: 37,
              end: 42,
            ),
          )), Span(
            start: 30,
            end: 43,
          )),
        ],
        span: Span(
          start: 28,
          end: 45,
        ),
      ),
    ), false),
  ],
))
